\name{NEWS}
\title{News for Package \pkg{Gifi}}
\encoding{UTF-8}


\section{Version 0.1-0}{
 \itemize{
    \item \code{princals wrapper incl. S3 added}
    \item \code{bug in makeNumeric fixed}
  }
}
