@@ -1,13 +1,13 @@
 Package: Gifi
 Type: Package
-Title: Gifi Models for Multivariate Analysis with Optimal Scaling
-Version: 0.1-0
-Date: 2017-03-02
+Title: Multivariate Analysis with Optimal Scaling
+Version: 0.1-1
+Date: 2017-03-03
 Authors@R: c(person("Patrick", "Mair", role = c("aut", "cre"), email = "mair@fas.harvard.edu"), person("Jan", "De Leeuw", role = "aut"), person("Patrick J. F.", "Groenen", role = "ctb"))
 Description: Implements categorical principal component analysis (PRINCALS), multiple correspondence analysis (HOMALS). It replaces the homals package. 
 URL: http://r-forge.r-project.org/projects/psychor/
 Imports: graphics, stats, colorspace
-Depends: R (>= 3.3.0)
+Depends: R (>= 3.1.0)
 License: GPL-3
 Suggests: knitr
 VignetteBuilder: knitr
