@@ -1,6 +1,8 @@
 useDynLib("Gifi")
 import("stats", "graphics", "colorspace")
 export(princals)
+export(knotsQ, knotsR, knotsD, knotsE, makeNumeric)
 
 S3method(print, princals)
+S3method(summary, princals)
 S3method(plot, princals)
