@@ -98,89 +98,6 @@ aproj <- function (a, h, x) {
   return (x + mu * a)
 }
 
-stepPlotter <- function (x, y, knots, xlab) {
-  y <- as.matrix (y)
-  plot (x, y[, 1], type = "n", xlab = xlab, ylab = "Transform")
-  nknots <- length (knots)
-  knots <- c(min(x) - 1, knots, max(x) + 1)
-  for (i in 1:(nknots + 1)) {
-    ind <- which ((x >= knots [i]) & (x < knots[i + 1]))
-    lev <- median (y [ind, 1])
-    lines (rbind (c(knots[i], lev), c (knots[i + 1], lev)), col = "RED", lwd = 3)
-    if (ncol (y) == 2) {
-      lev <- median (y [ind, 2])
-      lines (rbind (c(knots[i], lev), c (knots[i + 1], lev)), col = "BLUE", lwd = 3)
-    }
-  }
-}
-
-starPlotter <- function (x, y, main = "") {
-  plot(
-    x,
-    xlab = "dimension 1",
-    ylab = "dimension 2",
-    col = "RED",
-    cex = .5,
-    main = main
-  )
-  points(y, col = "BLUE", cex = .5)
-  for (i in 1:nrow(x))
-    lines (rbind (x[i, ], y[i, ]))
-}
-
-regressionPlotter <-
-  function (table,
-            x,
-            y,
-            xname = "Columns",
-            yname = "Rows",
-            main = "",
-            lines = TRUE,
-            cex = 1.0,
-            ticks = "n") {
-    if (ticks != "n") {
-      ticks <- NULL
-    }
-    nr <- nrow (table)
-    nc <- ncol (table)
-    sr <- rowSums (table)
-    sc <- colSums (table)
-    rc <- sum (table)
-    x <- x - sum (sr * x) / rc
-    y <- y - sum (sc * y) / rc
-    x <- x / sqrt (sum (sr * (x ^ 2)) / rc)
-    y <- y / sqrt (sum (sc * (y ^ 2)) / rc)
-    ar <- drop ((table %*% y) / sr)
-    ac <- drop ((x %*% table) / sc)
-    plot (
-      0,
-      xlim = c (min(y), max(y)),
-      ylim = c (min(x), max(x)),
-      xlab = xname,
-      ylab = yname,
-      main = main,
-      xaxt = ticks,
-      yaxt = ticks,
-      type = "n"
-    )
-    if (lines) {
-      for (i in 1:nr)
-        abline (h = x[i])
-      for (j in 1:nc)
-        abline (v = y[j])
-    }
-    for (i in 1:nr) {
-      for (j in 1:nc) {
-        text(y[j],
-             x[nr - i + 1],
-             as.character(table[i, j]),
-             cex = cex,
-             col = "RED")
-      }
-    }
-    lines (y, ac, col = "BLUE")
-    lines (ar, x, col = "BLUE")
-  }
 
 corList <- function (x) {
   m <- length (x)
